--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="/assets/css/normalize.css">
   <link rel="stylesheet" href="/assets/css/main.css">
+
+  <script src="https://cdn.auth0.com/js/auth0/8.8/auth0.min.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
